--- a/design/templates/OpenGame/buildings_hangar.tpl.html
+++ b/design/templates/OpenGame/buildings_hangar.tpl.html
@@ -17,7 +17,7 @@
         <th colspan="2" class="c" align="center">
           <table width=100% class="noborder">
             <tr>
-              <th width=120px>
+              <th width="11em">
                 <div id="ov_{QUE_ID}"></div>
                 <div id="ov_{QUE_ID}_timer" style="color: lime"></div>
                 <div>{L_sys_total_time}</div>
@@ -45,7 +45,7 @@
 
     <!-- BEGIN production -->
     <tr>
-      <th width="120px">
+      <th width="11em">
         <a href="infos.php?gid={production.ID}">
           {production.NAME}<br />
           <img border=0 src="{dpath}gebaeude/{production.ID}.gif" align=top width=120 height=120>
