--- a/design/templates/OpenGame/buildings_research.tpl.html
+++ b/design/templates/OpenGame/buildings_research.tpl.html
@@ -11,7 +11,7 @@
       <th colspan="2" class="c" align="center">
         <table width=100% class="noborder">
           <tr>
-            <th width=120px>
+            <th width="11em">
               <div id="ov_{QUE_ID}"></div>
               <div id="ov_{QUE_ID}_timer" style="color: lime"></div>
               <div>{L_sys_total_time}</div>
