--- a/design/templates/OpenGame/eco_bld_queue_list.tpl.html
+++ b/design/templates/OpenGame/eco_bld_queue_list.tpl.html
@@ -1,7 +1,7 @@
   <!-- IF $QUE_NOT_EMPTY -->
         <table class="noborder" width=100%>
           <tr>
-            <th width="120px">
+            <th width="11em">
               <div id="ov_{QUE_ID}"></div>
               <div id="ov_{QUE_ID}_timer" style="color: lime"></div>
               <div>{L_sys_total_time}</div>
