--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -22,7 +22,7 @@
 </script>
 
 <form action="index.php?page=options&mode=change" method="post" name="fOptions" enctype="multipart/form-data">
-  <div id="tab_container" style="width: 550px;display: none">
+  <div id="tab_container" style="font-size: 1em; width: 50rem;display: none">
     <ol>
       <li><a href="#tab_account">{L_opt_account}</a></li>
       <li><a href="#tab_interface">{L_opt_int_options}</a></li>
