--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -83,13 +83,11 @@
                     <input type="button" name="rename" value="{L_ov_rename}" onclick="$('#dialog-rename-planet').dialog('open');"/>
                   </div>
                 </th>
-                <th class="c_r" nowrap width="110px">
-                  <button  go="" mode="manage" style="display: inline-block; width: 110px;">
-                    <span class="positive link">{L_ov_manage}</span>
+                <th class="c_r" nowrap width="11em">
+                  <button  go="" mode="manage" style="display: inline-block; width: 100%;">
+                    <span class="positive">{L_ov_manage}</span>
                   </button>
                 </th>
-
-
               </tr>
             </table>
           </th>
@@ -119,7 +117,7 @@
         <!-- ENDIF -->
 
         <tr>
-          <td class="c_c" width="120" rowspan="5">
+          <td class="c_c" width="11em" rowspan="5">
             <!-- DEFINE $PLANET_ID = '{PLANET_ID}' -->
             <!-- INCLUDE planet_governor -->
           </td>
