--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -61,13 +61,13 @@
     <td class="c_l noborder">
       <table width="100%" cellspacing="0" cellpadding="0"><tr>
         <!-- BOF Nav Bar Left block -->
-        <td class="c_l noborder">
+        <td class="c_l noborder" height="5.818181818182em">
 
           <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
           <!-- INCLUDE eco_queue -->
-          <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;" class="c_c">
+          <div style="display: inline-block; position: relative; width: 11.63636363636em; height: 5.818181818182em; margin-right: 0.25em;" class="c_c">
             <a href="buildings.php?mode=research">
-              <img style="position: absolute; left: 0; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_128x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
+              <img style="position: absolute; left: 0; top: 0;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_128x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
               <!-- IF $QUE_NOT_EMPTY -->
               <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
                 <div id="topnav_{QUE_ID}"></div>
@@ -90,7 +90,7 @@
         <!-- BOF Nav Bar Middle block -->
         <td class="c_c noborder">
 
-          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="fleet.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_expedition_64x64.png" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
               <span style="position: absolute; right: 0; bottom: 0;" id="topnav_expedition_counter_total" class="icon_alpha">
@@ -99,7 +99,7 @@
             </a>
           </div>
 
-          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="flying_fleets.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_fleet_own_64x64.png" height="100%" alt="{L_sys_fleets}" title="{L_sys_fleets}">
               <span style="position: absolute; right: 0; bottom: 0;" id="topnav_fleet_counter_total" class="icon_alpha">
@@ -108,7 +108,7 @@
             </a>
           </div>
 
-          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="quest.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_quest_64x64.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
               <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha">
@@ -117,7 +117,7 @@
             </a>
           </div>
 
-          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="messages.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_mail_64x64.png" width="100%" alt="{L_Message}" title="{L_Message}">
               <div style="position: absolute; left: 0px; bottom: 0px; width: 100%; text-align: center;" class="">
@@ -147,7 +147,7 @@
         <!-- BOF Nav Bar Right block -->
         <td class="c_r noborder">
 
-          <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
+          <div style="position: relative; display: inline-block; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="dark_matter.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_dark_matterie_64x64.png" height="100%" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
               <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_DARK_MATTER_TEXT}</span>
@@ -155,7 +155,7 @@
           </div>
 
           <!-- IF TOPNAV_PAYMENT -->
-          <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
+          <div style="position: relative; display: inline-block; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;">
             <a href="metamatter.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_metamatter_64x64.png" height="100%" alt="{L_sys_metamatte}" title="{L_sys_metamatter}">
               <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_METAMATTER_TEXT}</span>
