--- a/skins/supernova-ivash/skin.css
+++ b/skins/supernova-ivash/skin.css
@@ -1,23 +1,22 @@
 /*
-                                 €€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€
-                                 €€€±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±€€€±
-                                 €€€±                                                  €€€±
-                                 €€€±                SuperNova: SuperNova              €€€±
-                                 €€€±                                                  €€€±
-                                 €€€±                      V 2.0                       €€€±
-                                 €€€±                                                  €€€±
-                                 €€€±    Skin for "SuperNova.ws" ogame.supernova.ws    €€€±
-                                 €€€±                                                  €€€±
-                                 €€€±                                                  €€€±
-                                 €€€±     The Emperor with 08.08.2009 22:44:47 Ivash   €€€±
-                                 €€€±            Alliance: NewSTAR                     €€€±
-                                 €€€±                                                  €€€±
-                                 €€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€€±
-                                  ±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±
+                                 ‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà
+                                 ‚ñà‚ñà‚ñà‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                                                  ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                SuperNova: SuperNova              ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                                                  ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                      V 2.0                       ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                                                  ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí    Skin for "SuperNova.ws" ogame.supernova.ws    ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                                                  ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                                                  ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí     The Emperor with 08.08.2009 22:44:47 Ivash   ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí            Alliance: NewSTAR                     ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñí                                                  ‚ñà‚ñà‚ñà‚ñí
+                                 ‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñà‚ñí
+                                  ‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí‚ñí
 */
 
-body, form, table, input, select
-{
+body, form, table, input, select {
   font-family : Tahoma, sans-serif;
   font-size : 11px;
 }
@@ -368,20 +367,19 @@ div .ui-dialog-content table { background: #344055; }
 .icons { background-image: url(images/icons.png); }
 
 /* Que item */
-.que_item
-{
+.que_item {
   cursor: pointer;
 
-  border: 0px;
+  border: 0;
 
   position: relative;
-  height: 60px;
-  width: 60px;
+  height: 5.5em;
+  width: 5.5em;
 
-  margin-right: 2px;
-  margin-bottom: 2px;
+  margin-right: 0.2em;
+  margin-bottom: 0.2em;
 
-  font-size: 100%;
+  font-size: 1em;
 }
 
 /* Unit picture */
@@ -398,17 +396,8 @@ div .ui-dialog-content table { background: #344055; }
 }
 
 /* Unit preview box on build pages */
-.unit_preview
-{
-  cursor: pointer;
-
-  border: 3px solid #483634;
-
-  position: relative;
-  height: 120px;
-  width: 120px;
-
-  font-size: 100%;
+.unit_preview {
+  border-color: #483634;
 }
 
 /* Pseudoelement to use colors from CSS in JS */
