--- a/design/templates/OpenGame/page_hint.tpl.html
+++ b/design/templates/OpenGame/page_hint.tpl.html
@@ -6,8 +6,10 @@
 
 <!-- IF $PAGE_HINT -->
 <br>
-<table width="<!-- IF PAGE_HINT_WIDTH -->{PAGE_HINT_WIDTH}<!-- ELSE -->519px<!-- ENDIF -->" border="0" cellpadding="0" cellspacing="1">
-  <tr><th class="c_c  neutral">{L_sys_hint}</th></tr>
-  <tr><td><div class="hint warning">{$PAGE_HINT}</div></td></tr>
-</table>
+<div style="width: <!-- IF PAGE_HINT_WIDTH -->{PAGE_HINT_WIDTH}<!-- ELSE -->47rem<!-- ENDIF -->;">
+  <table width="100%" border="0" cellpadding="0" cellspacing="1">
+    <tr><th class="c_c  neutral">{L_sys_hint}</th></tr>
+    <tr><td><div class="hint warning">{$PAGE_HINT}</div></td></tr>
+  </table>
+</div>
 <!-- ENDIF -->
