--- a/design/css/global.css
+++ b/design/css/global.css
@@ -371,6 +371,11 @@ table {margin-left: auto; margin-right: auto}
 .planet_list_top87 > .planet_list_wrap > .deuterium_bar {
   left: 7.50em; /* 75/11 = 6,818181818182 */
 }
+.planet_list_top87 > .planet_list_wrap > .images > .icon-gather-wrapper {
+  height: 25%; width: 25%;
+  bottom: 0px; right: 0px;
+  position: absolute;
+}
 
 .planet_list_top112 {
   width: 9.75em;
